--- a/.github/workflows/events-nightly.yml
+++ b/.github/workflows/events-nightly.yml
@@ -98,6 +98,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # see: https://pytorch.org/get-started/previous-versions/
+      - run: |
+          cuda=$(python -c "from distutils.version import LooseVersion as LVer ; print(11.1 if LVer(${{matrix.pytorch_version}}) > LVer('1.7') else 10.2)" 2>&1)
+          echo "::set-output name=CUDA::$cuda"
+        id: extend
+
       - name: Publish CUDA to Docker Hub
         # publish master/release
         uses: docker/build-push-action@v2
@@ -105,6 +111,7 @@ jobs:
           build-args: |
             PYTHON_VERSION=${{ matrix.python_version }}
             PYTORCH_VERSION=${{ matrix.pytorch_version }}
+            CUDA_VERSION=${{ steps.extend.outputs.CUDA }}
           file: dockers/base-cuda/Dockerfile
           push: ${{ github.ref == 'refs/heads/master' }}
           tags: pytorchlightning/pytorch_lightning:base-cuda-py${{ matrix.python_version }}-torch${{ matrix.pytorch_version }}
@@ -134,7 +141,7 @@ jobs:
 
       # see: https://pytorch.org/get-started/previous-versions/
       - run: |
-          cuda=$(python -c "print(11.1 if float(${{matrix.pytorch_version}}) > 1.7 else 10.2)" 2>&1)
+          cuda=$(python -c "from distutils.version import LooseVersion as LVer ; print(11.1 if LVer(${{matrix.pytorch_version}}) > LVer('1.7') else 10.2)" 2>&1)
           echo "::set-output name=CUDA::$cuda"
         id: extend
 
