--- a/.github/workflows/ci_dockers.yml
+++ b/.github/workflows/ci_dockers.yml
@@ -109,7 +109,7 @@ jobs:
 
       # see: https://pytorch.org/get-started/previous-versions/
       - run: |
-          cuda=$(python -c "from distutils.version import LooseVersion as LVer ; print(11.1 if LVer(${{matrix.pytorch_version}}) > LVer('1.7') else 10.2)" 2>&1)
+          cuda=$(python -c "from distutils.version import LooseVersion as LVer ; print(11.1 if LVer('${{matrix.pytorch_version}}') > LVer('1.7') else 10.2)" 2>&1)
           echo "::set-output name=CUDA::$cuda"
         id: extend
 
