--- a/.github/workflows/ci_dockers.yml
+++ b/.github/workflows/ci_dockers.yml
@@ -23,8 +23,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.7]
-        pytorch_version: [1.6, 1.8]
+        python_version: ["3.8"]
+        pytorch_version: ["1.6", "1.8"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -45,8 +45,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.7]
-        xla_version: [1.6, 1.8, "nightly"]
+        python_version: ["3.7"]
+        xla_version: ["1.6", "1.8", "nightly"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -69,12 +69,10 @@ jobs:
       matrix:
         include:
           # todo: see notes in Dockerfile
-          - python_version: 3.7
-            pytorch_version: 1.6
-          - python_version: 3.8
-            pytorch_version: 1.8
-          - python_version: 3.9
-            pytorch_version: 1.9
+          - python_version: "3.7"
+            pytorch_version: "1.6"
+          - python_version: "3.9"
+            pytorch_version: "1.9"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -97,12 +95,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - python_version: 3.6
-            pytorch_version: 1.6
-          - python_version: 3.8
-            pytorch_version: 1.9
-          - python_version: 3.9
-            pytorch_version: 1.10
+          - python_version: "3.7"
+            pytorch_version: "1.6"
+          - python_version: "3.8"
+            pytorch_version: "1.9"
+          - python_version: "3.9"
+            pytorch_version: "1.10"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -146,8 +144,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - python_version: 3.8
-            pytorch_version: 1.7
+          - python_version: "3.8"
+            pytorch_version: "1.7"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
