--- a/.github/workflows/events-nightly.yml
+++ b/.github/workflows/events-nightly.yml
@@ -4,7 +4,12 @@ name: Nightly events
 # https://github.community/t/distinct-job-for-each-schedule/17811/2
 on:
   schedule:
-    - cron: "0 0 * * *" # At the end of every day
+    # At the end of every day
+    - cron: "0 0 * * *"
+  push: {}
+
+env:
+  PUSH_TO_HUB: true
 
 # based on https://github.com/pypa/gh-action-pypi-publish
 jobs:
@@ -70,7 +75,7 @@ jobs:
             PYTHON_VERSION=${{ matrix.python_version }}
             XLA_VERSION=${{ matrix.xla_version }}
           file: dockers/base-xla/Dockerfile
-          push: ${{ github.ref == 'refs/heads/master' }}
+          push: ${{ env.PUSH_TO_HUB }}
           tags: pytorchlightning/pytorch_lightning:base-xla-py${{ matrix.python_version }}-torch${{ matrix.xla_version }}
         timeout-minutes: 55
 
@@ -104,7 +109,7 @@ jobs:
             PYTHON_VERSION=${{ matrix.python_version }}
             PYTORCH_VERSION=${{ matrix.pytorch_version }}
           file: dockers/base-cuda/Dockerfile
-          push: ${{ github.ref == 'refs/heads/master' }}
+          push: ${{ env.PUSH_TO_HUB }}
           tags: pytorchlightning/pytorch_lightning:base-cuda-py${{ matrix.python_version }}-torch${{ matrix.pytorch_version }}
         timeout-minutes: 55
 
@@ -145,7 +150,7 @@ jobs:
             PYTORCH_VERSION=${{ matrix.pytorch_version }}
             CUDA_VERSION=${{ steps.extend.outputs.CUDA }}
           file: dockers/base-conda/Dockerfile
-          push: ${{ github.ref == 'refs/heads/master' }}
+          push: ${{ env.PUSH_TO_HUB }}
           tags: pytorchlightning/pytorch_lightning:base-conda-py${{ matrix.python_version }}-torch${{ matrix.pytorch_version }}
         timeout-minutes: 55
 
@@ -170,8 +175,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: dockers/nvidia/Dockerfile
-          push: ${{ github.ref == 'refs/heads/master' }}
-          tags: nvcr.io/pytorchlightning/pytorch_lightning:nvidia
+          tags: nvcr.io/pytorchlightning/pytorch_lightning:latest
         timeout-minutes: 55
 
   docker-IPU:
@@ -204,7 +208,7 @@ jobs:
             PYTHON_VERSION=${{ matrix.python_version }}
             PYTORCH_VERSION=${{ matrix.pytorch_version }}
           file: dockers/base-ipu/Dockerfile
-          push: ${{ github.ref == 'refs/heads/master' }}
+          push: ${{ env.PUSH_TO_HUB }}
           tags: pytorchlightning/pytorch_lightning:base-ipu-py${{ matrix.python_version }}-torch${{ matrix.pytorch_version }}
         timeout-minutes: 55
 
@@ -216,6 +220,6 @@ jobs:
             PYTHON_VERSION=${{ matrix.python_version }}
             PYTORCH_VERSION=${{ matrix.pytorch_version }}
           file: dockers/ipu-ci-runner/Dockerfile
-          push: ${{ github.ref == 'refs/heads/master' }}
+          push: ${{ env.PUSH_TO_HUB }}
           tags: pytorchlightning/pytorch_lightning:ipu-ci-runner-py${{ matrix.python_version }}
         timeout-minutes: 55
