--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ force_sort_within_sections = "False"
 order_by_type = "False"
 
 [tool.vulture]
-exclude = ['pytorch_lightning/metrics']
+exclude = ['pytorch_lightning/metrics', 'pytorch_lightning/core/lightning.py']
 make_whitelist = true
 min_confidence = 95
 paths = ["pytorch_lightning"]
