--- a/.github/workflows/ci_test-code.yml
+++ b/.github/workflows/ci_test-code.yml
@@ -8,7 +8,7 @@ on:  # Trigger the workflow on push or pull request, but only for the master bra
 
 jobs:
   python-typing-mypy:
-    name: Python typing Mypy check
+    name: Python typing Mypy
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@master
