--- a/setup.cfg
+++ b/setup.cfg
@@ -183,6 +183,8 @@ ignore_errors = True
 ignore_errors = True
 [mypy-pytorch_lightning.utilities.cli]
 ignore_errors = False
+[mypy-pytorch_lightning.utilities.device_dtype_mixin]
+ignore_errors = False
 [mypy-pytorch_lightning.utilities.device_parser]
 ignore_errors = False
 [mypy-pytorch_lightning.utilities.parsing]
