--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -19,4 +19,4 @@ jobs:
         run: |
           pip install mypy
           pip list
-      - run: mypy
+      - run: mypy --config-file pyproject.toml
