--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -17,6 +17,6 @@ jobs:
           python-version: 3.8
       - name: Install mypy
         run: |
-          pip install mypy
+          grep mypy requirements/test.txt | xargs -0 pip install
           pip list
       - run: mypy
