--- a/setup.cfg
+++ b/setup.cfg
@@ -82,11 +82,14 @@ license_file = LICENSE
 
 
 [pydocstyle]
-convention = pep257
-# D104, D107: Ignore missing docstrings in __init__ files and methods.
-# D202: Ignore a blank line after docstring (collision with Python Black in decorators)
-add-ignore = D104,D107,D202
-max-line-length = 120
+convention = google
+# D102: Missing docstring in public method
+# D104: Missing docstring in magic method
+# D105: Missing docstring in public package
+# D212: Multi-line docstring summary should start at the first line
+add-ignore = D102,D104,D105,D212
+# D213: Multi-line docstring summary should start at the second line
+add-select = D213
 
 
 [yapf]
