--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,9 +59,10 @@ repos:
         name: Check PEP8
 
   - repo: https://github.com/PyCQA/pydocstyle
-    rev: 6.0.0
+    rev: 6.1.1
     hooks:
       - id: pydocstyle
+        additional_dependencies: ['.[toml]']
         exclude: |
             (?x)(
                 tests/|
