--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ requires = [
     "wheel",
 ]
 
+
 [tool.isort]
 known_first_party = [
     "benchmarks",
@@ -16,3 +17,17 @@ profile = "black"
 line_length = 120
 force_sort_within_sections = "False"
 order_by_type = "False"
+
+
+[tool.pydocstyle]
+convention = "google"
+add-ignore = [
+    "D100",  # Missing docstring in public module
+    "D102",  # Missing docstring in public method
+    "D104",  # Missing docstring in magic method
+    "D105",  # Missing docstring in public package
+    "D212",  # Multi-line docstring summary should start at the second line
+]
+add-select = [
+    "D213"  # Multi-line docstring summary should start at the second line
+]
