--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -42,7 +42,7 @@ pull_request_rules:
       - -draft # filter-out GH draft PRs
       - -title~=(?i)wip # skip all PR that title contains “WIP” (ignoring case)
       - "#approved-reviews-by>=1" # number of review approvals
-      - "#changes-requested-reviews-by==0" # no requested changes
+      - "#changes-requested-reviews-by=0" # no requested changes
     actions:
       label:
         add: [ "0:] Ready-To-Go" ]
@@ -50,7 +50,7 @@ pull_request_rules:
   - name: Not ready yet
     conditions:
       - or:
-        - "#approved-reviews-by==0" # number of review approvals
+        - "#approved-reviews-by=0" # number of review approvals
         - "#changes-requested-reviews-by>=1" # no requested changes
     actions:
       label:
