--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,15 +33,6 @@ references:
        git checkout stable
        cd ..
 
-  set_pr_and_commit_sha_env: &set_pr_and_commit_sha_env
-    run:
-      name: Set PR number & Commit SHA env variables
-      command: |
-        export PR_NUMBER=$(git ls-remote origin "pull/*/head" | grep -F -f <(git rev-parse HEAD) | awk -F'/' '{print $3}')
-        export SHA=$(git rev-parse --short HEAD)
-        echo $PR_NUMBER
-        echo $SHA
-
   install_jsonnet: &install_jsonnet
     run:
       name: Install jsonnet
@@ -51,6 +42,9 @@ references:
   update_jsonnet: &update_jsonnet
     run:
       name: Update jsonnet
+      environment:
+        PR_NUMBER: $(git ls-remote origin "pull/*/head" | grep -F -f <(git rev-parse HEAD) | awk -F'/' '{print $3}')
+        SHA: $(git rev-parse --short HEAD)
       command: |
        python -c "fname = 'dockers/tpu-tests/tpu_test_cases.jsonnet' ; fff = open(fname).read().replace('{PYTORCH_VERSION}', '$XLA_VER')
        fff = fff.replace('{PYTHON_VERSION}', '$PYTHON_VER').replace('{PR_NUMBER}', '$PR_NUMBER').replace('{SHA}', '$SHA') ; open(fname, 'w').write(fff)"
@@ -61,7 +55,7 @@ references:
      name: Deploy the job on the kubernetes cluster
      command: |
        export PATH=$PATH:$HOME/go/bin
-       job_name=$(jsonnet -J ml-testing-accelerators/ dockers/tpu-tests/tpu_test_cases.jsonnet | kubectl create -f -)
+       job_name=$(jsonnet -J ml-testing-accelerators/ dockers/tpu-tests/tpu_test_cases.jsonnet | kubectl create -f -) && \
        job_name=${job_name#job.batch/}
        job_name=${job_name% created}
        echo "Waiting on kubernetes job: $job_name"
@@ -112,7 +106,6 @@ jobs:
       - gcp-gke/update-kubeconfig-with-credentials:
           cluster: $GKE_CLUSTER
           perform-login: true
-      - *set_pr_and_commit_sha_env
       - *install_jsonnet
       - *update_jsonnet
       - *deploy_cluster
