--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,10 +42,9 @@ references:
   update_jsonnet: &update_jsonnet
     run:
       name: Update jsonnet
-      environment:
-        PR_NUMBER: $(git ls-remote origin "pull/*/head" | grep -F -f <(git rev-parse HEAD) | awk -F'/' '{print $3}')
-        SHA: $(git rev-parse --short HEAD)
       command: |
+       export PR_NUMBER=$(git ls-remote origin "pull/*/head" | grep -F -f <(git rev-parse HEAD) | awk -F'/' '{print $3}')
+       export SHA=$(git rev-parse --short HEAD)
        python -c "fname = 'dockers/tpu-tests/tpu_test_cases.jsonnet' ; fff = open(fname).read().replace('{PYTORCH_VERSION}', '$XLA_VER')
        fff = fff.replace('{PYTHON_VERSION}', '$PYTHON_VER').replace('{PR_NUMBER}', '$PR_NUMBER').replace('{SHA}', '$SHA') ; open(fname, 'w').write(fff)"
        cat dockers/tpu-tests/tpu_test_cases.jsonnet
